--- a/admin/config.yml
+++ b/admin/config.yml
@@ -6,7 +6,7 @@ backend:
   branch: master # Branch to update (optional; defaults to master)
 
 publish_mode: editorial_workflow
-media_folder: "/assets/images/uploads" # Media files will be stored in the repo under /assets/images/uploads
+media_folder: "assets/images/uploads" # Media files will be stored in the repo under assets/images/uploads
 
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
