--- a/admin/config.yml
+++ b/admin/config.yml
@@ -19,9 +19,10 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Subtitle", name: "subtitle", widget: "string", required: false}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Categories", name: "string", widget: "string", required: false}
-      - {label: "Tags", name: "string", widget: "string", required: false}
+      - {label: "Categories", name: "categories", widget: "string", required: false}
+      - {label: "Tags", name: "tags", widget: "string", required: false}
       - {label: "Comments", name: "comments", widget: "boolean"}
       - {label: "Body", name: "body", widget: "markdown"}
     meta: # Meta data fields. Just like fields, but without any preview element
       - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD hh:mm:ss"}
+      
