--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,8 @@
 - name: Web Design
   desc: A collection of designs for all kinds of web pages
-  src: 
+  src: https://picsum.photos/id/1043/250/250.jpg
   link: /projects/web-design/
+- name: Create Box
+  desc: A website to create rounded boxes and shadows
+  src: /assets/images/create-box.png
+  link: /projects/create-box
