--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,8 +1,9 @@
-- name: Web Design
-  desc: A collection of designs for all kinds of web pages
-  src: https://picsum.photos/id/1043/250/250.jpg
-  link: /projects/web-design/
 - name: Create Box
   desc: A website to create rounded boxes and shadows
   src: /assets/images/create-box.png
   link: /projects/create-box
+- name: Store
+  desc: Find designs fresh from the oven
+  src: https://picsum.photos/id/810/250/250.jpg
+  link: /projects/store
+  
