--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     }
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "portal-vue": "^2.1.7"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
