--- a/package.json
+++ b/package.json
@@ -36,10 +36,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "remark-parse": "^8.0.0",
-    "remark-react": "^7.0.1",
-    "tailwindcss": "^1.4.4",
-    "unified": "^9.0.0"
+    "tailwindcss": "^1.4.4"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
