Update nav links

--- a/src/data/nav-links.yaml
+++ b/src/data/nav-links.yaml
@@ -1,6 +1,6 @@
-- label: Projects
+- title: Projects
   to: /projects
-- label: Blog
+- title: Blog
   to: /blog
-- label: Contact
+- title: Contact
   to: /contact
