--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "autoprefixer": "^9.7.5",
     "gatsby": "^2.20.12",
+    "gatsby-alias-imports": "^1.0.4",
     "gatsby-image": "^2.3.1",
     "gatsby-plugin-catch-links": "^2.2.1",
     "gatsby-plugin-google-analytics": "^2.2.2",
