--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,yaml,md}\"",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "format": "prettier --write \"**/*.{js,jsx,json,yaml,md}\"",
+    "optimize-svg": "svgo -r -f \"./src\""
   },
   "dependencies": {
     "autoprefixer": "^9.7.5",
@@ -42,6 +43,7 @@
     "tailwindcss": "^1.4.4"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "svgo": "^1.3.2"
   }
 }
