--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
+[build]
+  publish = "public"
+
+[[plugins]]
+  package = "netlify-plugin-gatsby-cache"
+
 [[redirects]]
   from = "https://bjornlu.netlify.com/*"
   to = "https://bjornlu.com/:splat"
