--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "format": "prettier --write \"**/*.{js,jsx,json,yaml,md}\"",
-    "optimize-svg": "svgo -r -f \"./src\""
+    "optimize-svg": "svgo --multipass -r -f \"./src\""
   },
   "dependencies": {
     "autoprefixer": "^9.7.5",
