Update GitHub username

--- a/src/data/socials.yaml
+++ b/src/data/socials.yaml
@@ -1,5 +1,5 @@
 - title: GitHub
-  link: https://github.com/BjornLuG
+  link: https://github.com/bluwy
 - title: Reddit
   link: https://reddit.com/user/IamLUG
 - title: Twitter
