Update twitter social

--- a/src/data/socials.yaml
+++ b/src/data/socials.yaml
@@ -3,4 +3,4 @@
 - title: Reddit
   link: https://reddit.com/user/IamLUG
 - title: Twitter
-  link: https://twitter.com/BjornLuG
+  link: https://twitter.com/bluwyoo
