--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "optimize-svg": "svgo --multipass -r -f \"./src\""
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "autoprefixer": "^9.7.5",
     "gatsby": "^2.20.12",
     "gatsby-alias-imports": "^1.0.4",
