--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write --plugin-search-dir=. **/*.{js,svelte,md}"
   },
   "devDependencies": {
+    "@sveltejs/adapter-static": "^1.0.0-next.13",
     "@sveltejs/kit": "^1.0.0-next.113",
     "prettier": "^2.3.1",
     "prettier-plugin-svelte": "^2.3.0",
