--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@sveltejs/kit": "^1.0.0-next.113",
     "prettier": "^2.3.1",
     "prettier-plugin-svelte": "^2.3.0",
-    "svelte": "^3.38.2"
+    "svelte": "^3.38.2",
+    "svelte-windicss-preprocess": "^4.0.8",
+    "windicss": "^3.1.1"
   }
 }
