--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --write --plugin-search-dir=. **/*.{js,svelte,md}"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^1.0.0-next.21",
+    "@sveltejs/adapter-netlify": "^1.0.0-next.35",
     "@sveltejs/kit": "^1.0.0-next.194",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
