--- a/packages/rollup-plugin-markdown/package.json
+++ b/packages/rollup-plugin-markdown/package.json
@@ -12,14 +12,16 @@
     "mdast-util-toc": "^6.1.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.0",
+    "rehype-raw": "^6.1.0",
     "rehype-slug": "^5.0.0",
     "rehype-stringify": "^9.0.2",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.0",
     "remark-parse": "^10.0.0",
-    "remark-prism": "^1.3.6",
     "remark-rehype": "^10.0.1",
-    "unified": "^10.1.0"
+    "shiki": "^0.9.12",
+    "unified": "^10.1.0",
+    "unist-util-visit": "^4.1.0"
   }
 }
