--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "bjorn-lu",
   "version": "0.0.1",
+  "private": true,
+  "author": "Bjorn Lu",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -11,10 +14,10 @@
   "devDependencies": {
     "@bjornlu/rollup-plugin-markdown": "workspace:*",
     "@sveltejs/adapter-static": "^1.0.0-next.24",
-    "@sveltejs/kit": "^1.0.0-next.214",
+    "@sveltejs/kit": "^1.0.0-next.216",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.1",
-    "svelte": "^3.44.3",
+    "svelte": "^3.45.0",
     "vite-plugin-windicss": "^1.6.1",
     "windicss": "^3.4.2"
   }
