Use static adapter
because Cloudflare adapter doesn't have function code split yet

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@bjornlu/rollup-plugin-markdown": "workspace:*",
-    "@sveltejs/adapter-cloudflare": "^1.0.0-next.7",
+    "@sveltejs/adapter-static": "^1.0.0-next.24",
     "@sveltejs/kit": "^1.0.0-next.218",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.1",
