--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,12 +1,14 @@
 {
+  "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "$lib/*": ["src/lib/*"],
+      "$lib":["src/lib"],
+      "$lib/*":["src/lib/*"],
       "$assets/*": ["src/assets/*"],
       "$data/*": ["src/data/*"],
       "$posts/*": ["src/posts/*"],
-      "$projects/*": ["src/projects/*"],
+      "$projects/*": ["src/projects/*"]
     }
   },
   "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte"]
