--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
+    "allowJs": false,
+    "checkJs": false,
     "baseUrl": ".",
     "paths": {
       "$lib":["src/lib"],
