Handle new features

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,17 +1,12 @@
 {
-  "extends": "./.svelte-kit/tsconfig.json",
+  // "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
-    "allowJs": false,
-    "checkJs": false,
-    "baseUrl": ".",
     "paths": {
-      "$lib":["src/lib"],
-      "$lib/*":["src/lib/*"],
+      "$lib/*": ["src/lib/*"],
       "$assets/*": ["src/assets/*"],
       "$data/*": ["src/data/*"],
       "$posts/*": ["src/posts/*"],
       "$projects/*": ["src/projects/*"]
     }
-  },
-  "include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.svelte"]
+  }
 }
