--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,9 @@
 {
-  // "extends": "./.svelte-kit/tsconfig.json",
+  "extends": "./.svelte-kit/tsconfig.json",
   "compilerOptions": {
     "paths": {
-      "$lib/*": ["src/lib/*"],
+      "$lib":["src/lib"],
+      "$lib/*":["src/lib/*"],
       "$assets/*": ["src/assets/*"],
       "$data/*": ["src/data/*"],
       "$posts/*": ["src/posts/*"],
