--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
   },
   "devDependencies": {
     "@bjornlu/rollup-plugin-markdown": "workspace:*",
-    "@sveltejs/adapter-cloudflare": "^1.0.0-next.19",
-    "@sveltejs/kit": "^1.0.0-next.334",
+    "@sveltejs/adapter-cloudflare": "^1.0.0-next.23",
+    "@sveltejs/kit": "^1.0.0-next.348",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.48.0",
     "vite-plugin-windicss": "^1.8.4",
-    "windicss": "^3.5.3"
+    "windicss": "^3.5.4"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "vite"
+      ]
+    }
   }
 }
