--- a/package.json
+++ b/package.json
@@ -6,27 +6,21 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
-    "format": "prettier --write --plugin-search-dir=. **/*.{js,ts,html,svelte,md,css,pcss}",
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "format": "prettier --write --cache --plugin-search-dir=. **/*.{js,ts,html,svelte,md,css,pcss}",
     "prepare": "svelte-kit sync"
   },
   "devDependencies": {
     "@bjornlu/rollup-plugin-markdown": "workspace:*",
-    "@sveltejs/adapter-cloudflare": "^1.0.0-next.23",
-    "@sveltejs/kit": "^1.0.0-next.348",
-    "prettier": "^2.6.2",
+    "@sveltejs/adapter-cloudflare": "^1.0.0-next.29",
+    "@sveltejs/kit": "^1.0.0-next.377",
+    "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.48.0",
-    "vite-plugin-windicss": "^1.8.4",
-    "windicss": "^3.5.4"
-  },
-  "pnpm": {
-    "peerDependencyRules": {
-      "ignoreMissing": [
-        "vite"
-      ]
-    }
+    "svelte": "^3.49.0",
+    "vite": "^3.0.0",
+    "vite-plugin-windicss": "^1.8.7",
+    "windicss": "^3.5.6"
   }
 }
