--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "format": "prettier --write --cache --plugin-search-dir=. **/*.{js,ts,html,svelte,md,css,pcss}",
-    "prepare": "svelte-kit sync"
+    "format": "prettier --write --cache --plugin-search-dir=. **/*.{js,ts,html,svelte,md,css,pcss}"
   },
   "devDependencies": {
     "@bjornlu/rollup-plugin-markdown": "workspace:*",
-    "@sveltejs/adapter-cloudflare": "^1.0.0-next.29",
-    "@sveltejs/kit": "^1.0.0-next.377",
+    "@sveltejs/adapter-cloudflare": "^1.0.0-next.31",
+    "@sveltejs/kit": "^1.0.0-next.401",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.49.0",
-    "vite": "^3.0.0",
+    "vite": "^3.0.4",
     "vite-plugin-windicss": "^1.8.7",
     "windicss": "^3.5.6"
   }
