--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,13 +1,3 @@
 {
-  "extends": "./.svelte-kit/tsconfig.json",
-  "compilerOptions": {
-    "paths": {
-      "$lib":["src/lib"],
-      "$lib/*":["src/lib/*"],
-      "$assets/*": ["src/assets/*"],
-      "$data/*": ["src/data/*"],
-      "$posts/*": ["src/posts/*"],
-      "$projects/*": ["src/projects/*"]
-    }
-  }
+  "extends": "./.svelte-kit/tsconfig.json"
 }
