--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.50.1",
+    "typescript": "^4.8.3",
     "vite": "^3.1.1",
     "vite-plugin-windicss": "^1.8.8",
     "windicss": "^3.5.6"
