--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "format": "prettier --write --cache --plugin-search-dir=. **/*.{js,ts,html,svelte,md,css,pcss}"
   },
   "devDependencies": {
-    "@bjornlu/rollup-plugin-markdown": "workspace:*",
-    "@sveltejs/adapter-cloudflare": "^1.0.0-next.34",
-    "@sveltejs/kit": "^1.0.0-next.483",
-    "prettier": "^2.7.1",
-    "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.50.1",
-    "typescript": "^4.8.3",
-    "vite": "^3.1.1",
+    "@bjornlu/rollup-plugin-markdown": "workspace:0.0.1",
+    "@sveltejs/adapter-cloudflare": "^1.0.0-next.40",
+    "@sveltejs/kit": "^1.0.0-next.561",
+    "prettier": "^2.8.0",
+    "prettier-plugin-svelte": "^2.8.1",
+    "svelte": "^3.53.1",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4",
     "vite-plugin-windicss": "^1.8.8",
     "windicss": "^3.5.6"
   }
