--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "devDependencies": {
     "@bjornlu/rollup-plugin-markdown": "workspace:0.0.1",
-    "@sveltejs/adapter-cloudflare": "^1.0.0-next.40",
-    "@sveltejs/kit": "^1.0.0-next.561",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
-    "svelte": "^3.53.1",
-    "typescript": "^4.9.3",
-    "vite": "^3.2.4",
-    "vite-plugin-windicss": "^1.8.8",
+    "@sveltejs/adapter-cloudflare": "^1.0.0",
+    "@sveltejs/kit": "^1.0.1",
+    "prettier": "^2.8.1",
+    "prettier-plugin-svelte": "^2.9.0",
+    "svelte": "^3.55.0",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.1",
+    "vite-plugin-windicss": "^1.8.10",
     "windicss": "^3.5.6"
   }
 }
