--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "format": "prettier --write --cache --plugin-search-dir=. **/*.{js,ts,html,svelte,md,css,pcss}"
   },
   "devDependencies": {
-    "@bjornlu/rollup-plugin-markdown": "workspace:0.0.1",
-    "@sveltejs/adapter-cloudflare": "^2.1.0",
-    "@sveltejs/kit": "^1.9.3",
-    "prettier": "^2.8.4",
-    "prettier-plugin-svelte": "^2.9.0",
-    "svelte": "^3.55.1",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.4",
+    "@bjornlu/rollup-plugin-markdown": "workspace:*",
+    "@sveltejs/adapter-cloudflare": "^2.2.0",
+    "@sveltejs/kit": "^1.15.0",
+    "prettier": "^2.8.7",
+    "prettier-plugin-svelte": "^2.10.0",
+    "svelte": "^3.58.0",
+    "typescript": "^5.0.3",
+    "vite": "^4.2.1",
     "vite-plugin-windicss": "^1.8.10",
     "windicss": "^3.5.6"
   }
