--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
-    "format": "prettier --write --cache --plugin-search-dir=. **/*.{js,ts,html,svelte,md,css,pcss}"
+    "format": "prettier --write **/*.{js,ts,html,svelte,md,css,pcss}"
   },
   "devDependencies": {
     "@bjornlu/rollup-plugin-markdown": "workspace:*",
-    "@sveltejs/adapter-cloudflare": "^2.3.0",
-    "@sveltejs/kit": "^1.21.0",
-    "prettier": "^2.8.8",
-    "prettier-plugin-svelte": "^2.10.1",
-    "svelte": "^4.0.1",
-    "typescript": "^5.1.6",
-    "vite": "^4.3.9",
+    "@sveltejs/adapter-cloudflare": "^2.3.3",
+    "@sveltejs/kit": "^1.25.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-svelte": "^3.0.3",
+    "svelte": "^4.2.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9",
     "vite-plugin-cloudflare-redirect": "^0.1.1",
-    "vite-plugin-windicss": "^1.9.0",
+    "vite-plugin-windicss": "^1.9.1",
     "windicss": "^3.5.6"
   }
 }
