--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "vite-plugin-cloudflare-redirect": "^0.1.2",
     "vite-plugin-windicss": "^1.9.3",
     "windicss": "^3.5.6"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "fenceparser@2.2.0": "patches/fenceparser@2.2.0.patch"
+    }
   }
 }
