--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "exports": "./index.js",
   "dependencies": {
+    "fenceparser": "^2.2.0",
     "js-yaml": "^4.1.0",
     "mdast-util-to-string": "^4.0.0",
     "mdast-util-toc": "^7.0.0",
