--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@sveltejs/adapter-cloudflare": "^4.1.0",
     "@sveltejs/kit": "^2.5.2",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@unocss/extractor-svelte": "^0.58.5",
+    "@unocss/postcss": "^0.58.5",
+    "@unocss/reset": "^0.58.5",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.1",
     "satori": "^0.10.13",
     "satori-html": "^0.3.2",
     "svelte": "^4.2.12",
     "typescript": "^5.3.3",
+    "unocss": "^0.58.5",
     "vite": "^5.1.4",
     "vite-plugin-cloudflare-redirect": "^0.1.2",
     "vite-plugin-windicss": "^1.9.3",
