--- a/package.json
+++ b/package.json
@@ -18,16 +18,18 @@
     "@sveltejs/adapter-cloudflare": "^4.7.2",
     "@sveltejs/kit": "^2.5.27",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@unocss/core": "^0.62.3",
     "@unocss/extractor-svelte": "^0.62.3",
     "@unocss/postcss": "^0.62.3",
+    "@unocss/preset-wind": "^0.62.3",
     "@unocss/reset": "^0.62.3",
+    "@unocss/vite": "^0.62.3",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
     "satori": "^0.11.0",
     "satori-html": "^0.3.2",
     "svelte": "^4.2.19",
     "typescript": "^5.6.2",
-    "unocss": "^0.62.3",
     "vite": "^5.4.5",
     "vite-plugin-cloudflare-redirect": "^0.1.2"
   },
