--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bjornlu/markdown",
+  "name": "@bluwy/markdown",
   "version": "0.0.1",
   "private": true,
   "author": "Bjorn Lu",
@@ -7,8 +7,8 @@
   "type": "module",
   "exports": "./index.js",
   "dependencies": {
-    "@shikijs/rehype": "^1.17.7",
-    "@shikijs/transformers": "^1.17.7",
+    "@shikijs/rehype": "^1.22.2",
+    "@shikijs/transformers": "^1.22.2",
     "fenceparser": "^2.2.0",
     "js-yaml": "^4.1.0",
     "mdast-util-to-string": "^4.0.0",
@@ -17,12 +17,12 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
-    "rehype-stringify": "^10.0.0",
+    "rehype-stringify": "^10.0.1",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
-    "remark-rehype": "^11.1.0",
+    "remark-rehype": "^11.1.1",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0"
   }
