--- a/package.json
+++ b/package.json
@@ -15,25 +15,26 @@
   "devDependencies": {
     "@bluwy/rollup-plugin-markdown": "workspace:*",
     "@resvg/resvg-js": "^2.6.2",
-    "@sveltejs/adapter-cloudflare": "^5.0.2",
-    "@sveltejs/kit": "^2.17.1",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@unocss/core": "^65.4.3",
-    "@unocss/extractor-svelte": "^65.4.3",
-    "@unocss/postcss": "^65.4.3",
-    "@unocss/preset-wind": "^65.4.3",
-    "@unocss/reset": "^65.4.3",
-    "@unocss/vite": "^65.4.3",
-    "prettier": "^3.5.1",
-    "prettier-plugin-svelte": "^3.3.3",
-    "satori": "^0.12.1",
+    "@sveltejs/adapter-cloudflare": "^7.2.3",
+    "@sveltejs/kit": "^2.36.3",
+    "@sveltejs/vite-plugin-svelte": "^6.1.3",
+    "@unocss/core": "^66.4.2",
+    "@unocss/extractor-svelte": "^66.4.2",
+    "@unocss/postcss": "^66.4.2",
+    "@unocss/preset-wind3": "^66.4.2",
+    "@unocss/reset": "^66.4.2",
+    "@unocss/vite": "^66.4.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "satori": "^0.16.2",
     "satori-html": "^0.3.2",
-    "svelte": "^5.20.0",
-    "typescript": "^5.7.3",
-    "vite": "^6.1.5",
-    "vite-plugin-cloudflare-redirect": "^1.0.0"
+    "svelte": "^5.38.5",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.3",
+    "vite-plugin-cloudflare-redirect": "^1.0.2",
+    "wrangler": "^4.33.0"
   },
-  "packageManager": "pnpm@9.15.3",
+  "packageManager": "pnpm@10.15.0",
   "pnpm": {
     "patchedDependencies": {
       "fenceparser@2.2.0": "patches/fenceparser@2.2.0.patch"
