--- a/package.json
+++ b/package.json
@@ -15,29 +15,34 @@
   "devDependencies": {
     "@bluwy/rollup-plugin-markdown": "workspace:*",
     "@resvg/resvg-js": "^2.6.2",
-    "@sveltejs/adapter-cloudflare": "^7.2.3",
-    "@sveltejs/kit": "^2.49.5",
-    "@sveltejs/vite-plugin-svelte": "^6.1.3",
-    "@unocss/core": "^66.4.2",
-    "@unocss/extractor-svelte": "^66.4.2",
-    "@unocss/postcss": "^66.4.2",
-    "@unocss/preset-wind3": "^66.4.2",
-    "@unocss/reset": "^66.4.2",
-    "@unocss/vite": "^66.4.2",
-    "prettier": "^3.6.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "satori": "^0.16.2",
+    "@sveltejs/adapter-cloudflare": "^7.2.6",
+    "@sveltejs/kit": "^2.50.1",
+    "@sveltejs/vite-plugin-svelte": "^6.2.4",
+    "@unocss/core": "^66.6.0",
+    "@unocss/extractor-svelte": "^66.6.0",
+    "@unocss/postcss": "^66.6.0",
+    "@unocss/preset-wind3": "^66.6.0",
+    "@unocss/reset": "^66.6.0",
+    "@unocss/vite": "^66.6.0",
+    "prettier": "^3.8.1",
+    "prettier-plugin-svelte": "^3.4.1",
+    "satori": "^0.19.1",
     "satori-html": "^0.3.2",
-    "svelte": "^5.38.5",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.11",
+    "svelte": "^5.48.3",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.1",
     "vite-plugin-cloudflare-redirect": "^1.0.2",
-    "wrangler": "^4.59.1"
+    "wrangler": "^4.60.0"
   },
-  "packageManager": "pnpm@10.15.0",
+  "packageManager": "pnpm@10.28.2",
   "pnpm": {
     "patchedDependencies": {
       "fenceparser@2.2.0": "patches/fenceparser@2.2.0.patch"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "sharp",
+      "workerd"
+    ]
   }
 }
